layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__chain_definition_reference_and_pronoun.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Company\") exists. The Company agrees. It shall deliver.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     exists  .     The     Company     agrees  .     It     shall     deliver  .
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                       ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.95)
                                                                                                 ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 17, confidence: 0.75 }, AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 10, confidence: 0.75 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 27, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 25, confidence: 0.45000000000000007 }] }, conf: 0.55)
                 ╰─────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Company", is_defined_term: true, mentions: [ChainMention { text: "Company", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Company", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 17 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.75, token_offset: 22 }], has_verified_mention: false }, conf: 0.95)
