layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__chain_only_references_no_pronouns.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Company\") exists. The Company shall deliver. The Company shall pay.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     exists  .     The     Company     shall     deliver  .     The     Company     shall     pay  .
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                       ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                    ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.95)
                 ╰─────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Company", is_defined_term: true, mentions: [ChainMention { text: "Company", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Company", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 17 }, ChainMention { text: "Company", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 26 }], has_verified_mention: false }, conf: 0.95)
