layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__contract_confidentiality_chain.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"XYZ Inc (the \"Receiving Party\") acknowledges receipt. The Receiving Party shall protect information. It shall not disclose.\"#)"
---
XYZ     Inc     (  the     "  Receiving     Party  "  )     acknowledges     receipt  .     The     Receiving     Party     shall     protect     information  .     It     shall     not     disclose  .
                ╰─────────────────────────────────────╯Scored(DefinedTerm { term_name: "Receiving Party", definition_type: Parenthetical }, conf: 0.90)
                                                                                                    ╰─────────────────╯Scored(TermReference { term_name: "Receiving Party", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                                                                     ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Receiving Party", is_defined_term: true, token_distance: 27, confidence: 0.65 }, AntecedentCandidate { text: "Receiving Party", is_defined_term: true, token_distance: 16, confidence: 0.65 }, AntecedentCandidate { text: "information", is_defined_term: false, token_distance: 10, confidence: 0.44999999999999996 }, AntecedentCandidate { text: "XYZ", is_defined_term: false, token_distance: 39, confidence: 0.35 }, AntecedentCandidate { text: "Inc", is_defined_term: false, token_distance: 37, confidence: 0.35 }] }, conf: 0.45)
                ╰─────────────────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Receiving Party", is_defined_term: true, mentions: [ChainMention { text: "Receiving Party", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Receiving", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 21 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.65, token_offset: 32 }], has_verified_mention: false }, conf: 0.90)
