layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__contract_delivery_clause_chain.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corporation (the \"Seller\") agrees to sell. The Seller shall deliver Products. It warrants quality.\"#)"
---
ABC     Corporation     (  the     "  Seller  "  )     agrees     to     sell  .     The     Seller     shall     deliver     Products  .     It     warrants     quality  .
                        ╰────────────────────────╯Scored(DefinedTerm { term_name: "Seller", definition_type: Parenthetical }, conf: 0.90)
                                                                                             ╰────╯Scored(TermReference { term_name: "Seller", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                                              ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Seller", is_defined_term: true, token_distance: 25, confidence: 0.75 }, AntecedentCandidate { text: "Seller", is_defined_term: true, token_distance: 14, confidence: 0.67 }, AntecedentCandidate { text: "Products", is_defined_term: false, token_distance: 8, confidence: 0.49 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 35, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corporation", is_defined_term: false, token_distance: 33, confidence: 0.45000000000000007 }] }, conf: 0.55)
                        ╰────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Seller", is_defined_term: true, mentions: [ChainMention { text: "Seller", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Seller", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 21 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.75, token_offset: 30 }], has_verified_mention: false }, conf: 0.95)
