layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__contract_multiple_parties_chain.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Licensor\") and XYZ Inc (the \"Licensee\") enter this Agreement. The Licensor grants rights. The Licensee shall pay royalties. It shall report usage.\"#)"
---
ABC     Corp     (  the     "  Licensor  "  )     and     XYZ     Inc     (  the     "  Licensee  "  )     enter     this     Agreement  .     The     Licensor     grants     rights  .     The     Licensee     shall     pay     royalties  .     It     shall     report     usage  .
                 ╰──────────────────────────╯Scored(DefinedTerm { term_name: "Licensor", definition_type: Parenthetical }, conf: 0.90)
                                                                          ╰──────────────────────────╯Scored(DefinedTerm { term_name: "Licensee", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                                                       ╰──────╯Scored(TermReference { term_name: "Licensor", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                                                                                                     ╰──────╯Scored(TermReference { term_name: "Licensee", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                     ╰──╯Scored(PronounReference { pronoun: "this", pronoun_type: Relative, candidates: [AntecedentCandidate { text: "Licensor", is_defined_term: true, token_distance: 50, confidence: 0.75 }, AntecedentCandidate { text: "Licensee", is_defined_term: true, token_distance: 36, confidence: 0.75 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 60, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 58, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "and", is_defined_term: false, token_distance: 48, confidence: 0.45000000000000007 }] }, conf: 0.55)
                                                                                                                                                                                                                                                     ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Licensor", is_defined_term: true, token_distance: 50, confidence: 0.75 }, AntecedentCandidate { text: "Licensee", is_defined_term: true, token_distance: 36, confidence: 0.75 }, AntecedentCandidate { text: "Licensor", is_defined_term: true, token_distance: 25, confidence: 0.65 }, AntecedentCandidate { text: "Licensee", is_defined_term: true, token_distance: 16, confidence: 0.65 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 60, confidence: 0.45000000000000007 }] }, conf: 0.55)
                                                                          ╰──────────────────────────╯Scored(PronounChain { chain_id: 2, canonical_name: "Licensee", is_defined_term: true, mentions: [ChainMention { text: "Licensee", mention_type: Definition, confidence: 0.9, token_offset: 18 }, ChainMention { text: "Licensee", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 44 }], has_verified_mention: false }, conf: 0.95)
                 ╰──────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Licensor", is_defined_term: true, mentions: [ChainMention { text: "Licensor", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "this", mention_type: Pronoun, confidence: 0.75, token_offset: 28 }, ChainMention { text: "Licensor", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 35 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.75, token_offset: 53 }], has_verified_mention: false }, conf: 0.95)
