layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__multiple_chains_separate_entities.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Seller\") and XYZ Inc (the \"Buyer\") agree. The Seller delivers. The Buyer pays.\"#)"
---
ABC     Corp     (  the     "  Seller  "  )     and     XYZ     Inc     (  the     "  Buyer  "  )     agree  .     The     Seller     delivers  .     The     Buyer     pays  .
                 ╰────────────────────────╯Scored(DefinedTerm { term_name: "Seller", definition_type: Parenthetical }, conf: 0.90)
                                                                        ╰───────────────────────╯Scored(DefinedTerm { term_name: "Buyer", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                           ╰────╯Scored(TermReference { term_name: "Seller", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                                                              ╰───╯Scored(TermReference { term_name: "Buyer", definition_type: Parenthetical }, conf: 0.95)
                                                                        ╰───────────────────────╯Scored(PronounChain { chain_id: 2, canonical_name: "Buyer", is_defined_term: true, mentions: [ChainMention { text: "Buyer", mention_type: Definition, confidence: 0.9, token_offset: 18 }, ChainMention { text: "Buyer", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 38 }], has_verified_mention: false }, conf: 0.95)
                 ╰────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Seller", is_defined_term: true, mentions: [ChainMention { text: "Seller", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Seller", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 31 }], has_verified_mention: false }, conf: 0.95)
