layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__multiple_chains_with_pronouns.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Company\") exists. XYZ Inc (the \"Vendor\") exists. The Company delivers. It agrees.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     exists  .     XYZ     Inc     (  the     "  Vendor  "  )     exists  .     The     Company     delivers  .     It     agrees  .
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                               ╰────────────────────────╯Scored(DefinedTerm { term_name: "Vendor", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                                    ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                                                                ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 8, confidence: 0.7899999999999999 }, AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 30, confidence: 0.75 }, AntecedentCandidate { text: "Vendor", is_defined_term: true, token_distance: 15, confidence: 0.75 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 40, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 38, confidence: 0.45000000000000007 }] }, conf: 0.59)
                 ╰─────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Company", is_defined_term: true, mentions: [ChainMention { text: "Company", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "Company", mention_type: TermReference, confidence: 0.9500000000000001, token_offset: 32 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.7899999999999999, token_offset: 37 }], has_verified_mention: false }, conf: 0.95)
