layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__plural_pronoun_resolution.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Company\") and its affiliates exist. They shall comply.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     and     its     affiliates     exist  .     They     shall     comply  .
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                                             ╰──╯Scored(PronounReference { pronoun: "They", pronoun_type: ThirdPlural, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 16, confidence: 0.6 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 26, confidence: 0.30000000000000004 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 24, confidence: 0.30000000000000004 }, AntecedentCandidate { text: "affiliates", is_defined_term: false, token_distance: 10, confidence: 0.3 }, AntecedentCandidate { text: "its", is_defined_term: false, token_distance: 12, confidence: 0.26 }] }, conf: 0.60)
                 ╰─────────────────────────╯Scored(PronounChain { chain_id: 1, canonical_name: "Company", is_defined_term: true, mentions: [ChainMention { text: "Company", mention_type: Definition, confidence: 0.9, token_offset: 4 }, ChainMention { text: "They", mention_type: Pronoun, confidence: 0.6, token_offset: 21 }], has_verified_mention: false }, conf: 0.85)
