layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun_chain__pronoun_with_competing_antecedents.snap
---
source: layered-contracts/src/tests/pronoun_chain.rs
expression: "test_chains(r#\"ABC Corp (the \"Seller\") sold to XYZ Inc (the \"Buyer\"). It shall deliver.\"#)"
---
ABC     Corp     (  the     "  Seller  "  )     sold     to     XYZ     Inc     (  the     "  Buyer  "  )  .     It     shall     deliver  .
                 ╰────────────────────────╯Scored(DefinedTerm { term_name: "Seller", definition_type: Parenthetical }, conf: 0.90)
                                                                                ╰───────────────────────╯Scored(DefinedTerm { term_name: "Buyer", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                 ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Buyer", is_defined_term: true, token_distance: 8, confidence: 0.8899999999999999 }, AntecedentCandidate { text: "Seller", is_defined_term: true, token_distance: 24, confidence: 0.75 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 34, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 32, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "sold", is_defined_term: false, token_distance: 22, confidence: 0.45000000000000007 }] }, conf: 0.69)
                                                                                ╰───────────────────────╯Scored(PronounChain { chain_id: 2, canonical_name: "Buyer", is_defined_term: true, mentions: [ChainMention { text: "Buyer", mention_type: Definition, confidence: 0.9, token_offset: 20 }, ChainMention { text: "It", mention_type: Pronoun, confidence: 0.8899999999999999, token_offset: 29 }], has_verified_mention: false }, conf: 0.90)
